# molviz

./: .clang-format  .gitignore  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake
.devcontainer/: Dockerfile  devcontainer.json
.github/: constants.env
.github/template/: README.md
.github/workflows/: template-janitor.yml
.trunk/: trunk.yaml
app/: CMakeLists.txt
app/config/: CMakeLists.txt  config.hpp.in
app/include/: config.hpp
app/molviz/: CMakeLists.txt
app/molviz/include/: config.hpp
app/molviz/src/: main.cpp
app/resources/meshes/sphere/: sphere.gltf
app/resources/shaders/: default.vert
app/src/: CMakeLists.txt  main.cpp
app/src/molviz/: CMakeLists.txt  main.cpp
cmake/: CPM.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  GitVars.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
config/: CMakeLists.txt  config.hpp.in
core/: CMakeLists.txt
core/include/: exceptions.hpp  inputhandler.hpp  utilities.hpp
core/include/cls/: singleton.hpp
core/include/ctx/: contextgfx.hpp
core/include/gfx/: camera.hpp  elementbuffer.hpp  mesh.hpp  model.hpp  parsergltf.hpp  shader.hpp  vertexarray.hpp  vertexbuffer.hpp
core/include/io/: event.hpp  eventdispatcher.hpp  eventlistener.hpp  inputhandler.hpp  keyboardlistener.hpp  keyevent.hpp  mouseevent.hpp  mousekeyevent.hpp  mouselistener.hpp  parsergltf.hpp
core/src/: CMakeLists.txt  inputhandler.cpp  utilities.cpp
core/src/ctx/: contextgfx.cpp
core/src/gfx/: CMakeLists.txt  camera.cpp  elementbuffer.cpp  mesh.cpp  model.cpp  parsergltf.cpp  shader.cpp  vertexarray.cpp  vertexbuffer.cpp
core/src/io/: event.cpp  eventdispatcher.cpp  inputhandler.cpp  keyboardlistener.cpp  keyevent.cpp  mouseevent.cpp  mousekeyevent.cpp  mouselistener.cpp  parsergltf.cpp
docs/: shader_style_guide.md  style_guide.md
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
include/: exceptions.hpp  utilities.hpp
include/gfx/: camera.hpp  elementbuffer.hpp  mesh.hpp  model.hpp  shader.hpp  vertexarray.hpp  vertexbuffer.hpp
include/libmolviz/gfx/: elementbuffer.hpp  shader.hpp  vertexbuffer.hpp
resources/shaders/: default.frag  default.vert  light.frag  light.vert
scripts/: copy_shaders.sh  cpp_gen.py
src/: CMakeLists.txt
src/libmolviz/: CMakeLists.txt  utilities.cpp
src/libmolviz/gfx/: camera.cpp  elementbuffer.cpp  mesh.cpp  model.cpp  shader.cpp  vertexarray.cpp  vertexbuffer.cpp
src/molviz/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_gfx.cpp  tests.cpp
test/include/: test_gfx_utilities.hpp  test_utilities.hpp  test_utilities_gfx.hpp
test/resources/meshes/cube/: cube.gltf
test/resources/meshes/cube_color/: cube_color.gltf
test/resources/shaders/: invalid.vert
test/src/: test_gfx.cpp  test_io.cpp  test_utilities_gfx.cpp
tools/: clean_build.sh  cpp_gen.py  format.sh  version_hash.py
